--- a/buildSrc/.gitignore
+++ b/buildSrc/.gitignore
@@ -1,7 +1,6 @@
 /local.properties
 .DS_Store
 
-
 # files for the dex VM
 *.dex
 
@@ -15,7 +14,7 @@ gen/
 # Android Studio
 /*.iml
 .idea
-/build
+./build/
 .gradle
 captures/
 
