fix: add ignored builscripts

--- a/buildSrc/src/main/resources/META-INF/gradle-plugins/me.2bab.polyfill.build.release.properties
+++ b/buildSrc/src/main/resources/META-INF/gradle-plugins/me.2bab.polyfill.build.release.properties
@@ -1,1 +1,1 @@
-implementation-class=me.xx2bab.polyfill.build.release.DeployPlugin
+implementation-class=me.xx2bab.polyfill.buildscript.release.DeployPlugin
