fix: resolve project compiling issue

--- a/test-project/app/src/main/AndroidManifest.xml
+++ b/test-project/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name="me.xx2bab.gradle.scratchpaper.sample.MainActivity">
+        <activity android:name="me.xx2bab.polyfill.sample.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
