--- a/test-project/app/src/main/AndroidManifest.xml
+++ b/test-project/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="me.xx2bab.gradle.scratchpaper.sample">
+    package="me.xx2bab.polyfill.sample">
 
     <application
         android:allowBackup="true"
