--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,11 +17,23 @@ jobs:
         with:
           java-version: 1.8
 
-      - name: Build & Release all Polyfill libraries using Gradle
+      - name: Prepare environment
+        env:
+          SIGNING_SECRET_KEY_CONTENT: ${{ secrets.SIGNING_SECRET_KEY_CONTENT }}
+          SIGNING_SECRET_KEY_RING_FILE: ${{ secrets.SIGNING_SECRET_KEY_RING_FILE }}
+        run: |
+          git fetch --unshallow
+          sudo bash -c "echo '$SIGNING_SECRET_KEY_CONTENT' | base64 -d > './polyfill/$SIGNING_SECRET_KEY_RING_FILE'"
+
+      - name: Build & Release all Polyfill libraries to MavenCentral
         run: chmod +x ./publish.sh | ./publish.sh
         env:
-          BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
-          BINTRAY_APIKEY: ${{ secrets.BINTRAY_APIKEY }}
+          SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY_ID }}
+          SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
+          SIGNING_SECRET_KEY_RING_FILE: ${{ secrets.SIGNING_SECRET_KEY_RING_FILE }}
+          SIGNING_SECRET_KEY_CONTENT: ${{ secrets.SIGNING_SECRET_KEY_CONTENT }}
+          OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
           GH_DEV_TOKEN: ${{ secrets.GH_DEV_TOKEN }}
 
       - name: Upload Github Artifacts
