--- a/buildSrc/src/main/resources/versions.properties
+++ b/buildSrc/src/main/resources/versions.properties
@@ -1,3 +1,3 @@
-agpVersion=4.2.0
-kotlinVersion=1.4.31
-polyfillVersion=0.3.1
+agpVersion=7.1.0-beta04
+kotlinVersion=1.5.31
+polyfillVersion=0.3.1.1-SNAPSHOT
