--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,7 @@ jobs:
       AGP_VERSION: ${{ matrix.agp-version }}
     strategy:
       matrix:
-        agp-version: [ 4.2.0, 7.0.0-alpha15 ]
+        agp-version: [ 7.0.3, 7.1.0-beta04 ]
 
     steps:
       - uses: actions/checkout@v2
