--- a/deps.versions.toml
+++ b/deps.versions.toml
@@ -6,7 +6,7 @@ agpVer = "7.2.1"
 agpPatchIgnoredVer = "7.2.0" # To be used by backport version matching
 agpBackportVer = "7.1.3"
 agpBackportPatchIgnoredVer = "7.1.0" # To be used by backport version matching, e.g. apply backport patches when (7.1.0 <= ver < 7.2.0)
-agpNextBateVer = "7.3.0-beta01"
+agpNextBetaVer = "7.3.0-beta01"
 
 # 30.2.0-beta03
 androidToolVer = "30.2.0"
@@ -21,9 +21,12 @@ android-tools-common = { module = "com.android.tools:common", version.ref = "and
 android-tools-sdklib = { module = "com.android.tools:sdklib", version.ref = "androidToolVer" }
 kotlin-std = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlinVer" }
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "kotlinVer" }
+kotlin-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version = "1.3.2" }
+kotlin-coroutine = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm", version = "1.6.0" }
 guava = { module = "com.google.guava:guava", version = "30.1.1-jre" }
 fastJson = { module = "com.alibaba:fastjson", version = "1.2.73" }
 zip4j = { module = "net.lingala.zip4j:zip4j", version = "2.6.2" }
+hamcrest = { module = "org.hamcrest:hamcrest-library", version = "2.2" }
 junit = { module = "junit:junit", version = "4.12" }
 mockito = { module = "org.mockito:mockito-core", version.ref = "mockitoVer" }
 mockitoInline = { module = "org.mockito:mockito-inline", version.ref = "mockitoVer" }
