--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
       AGP_VERSION: ${{ matrix.agp-version }}
     strategy:
       matrix:
-        agp-version: [ 7.1.2, 7.2.0-beta04 ]
+        agp-version: [ 7.1.3, 7.2.1 ]
 
     steps:
       - uses: actions/checkout@v2
