--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,14 +65,10 @@ jobs:
       - run: |
           ./gradlew test
   functional-tests:
-    name: Functional tests
+    name: Functional Tests
     runs-on: ubuntu-latest
     env:
       JAVA_TOOL_OPTIONS: -Xmx4g
-      AGP_VERSION: ${{ matrix.agp-version }}
-    strategy:
-      matrix:
-        agp-version: [ 7.1.3, 7.2.1 ]
 
     steps:
       - uses: actions/checkout@v2
