--- a/deps.versions.toml
+++ b/deps.versions.toml
@@ -1,15 +1,16 @@
 [versions]
-kotlinVer = "1.6.21"
+kotlinVer = "1.9.10"
 buildConfigVer = "3.0.3"
 
-agpVer = "7.2.2"
-agpPatchIgnoredVer = "7.2.0" # To be used by backport version matching
-agpBackportVer = "7.1.3"
-agpBackportPatchIgnoredVer = "7.1.0" # To be used by backport version matching, e.g. apply backport patches when (7.1.0 <= ver < 7.2.0)
-agpNextBetaVer = "7.3.0-beta01"
+agpVer = "8.1.2"
+agpPatchIgnoredVer = "8.1.0" # To be used by backport version matching
+agpBackportVer = "8.0.1"
+agpBackportPatchIgnoredVer = "8.0.1" # To be used by backport version matching, e.g. apply backport patches when (7.1.0 <= ver < 7.2.0)
+agpNextBetaVer = "8.2.0-beta06"
 
-# 30.2.0-beta03
-androidToolVer = "30.2.0"
+# Please refer to https://mvnrepository.com/artifact/com.android.tools/sdk-common?repo=google
+# The minor and patch version are synced with agpVer
+androidToolVer = "31.1.2"
 mockitoVer = "3.9.0"
 
 [libraries]
@@ -20,11 +21,9 @@ android-tools-common = { module = "com.android.tools:common", version.ref = "and
 android-tools-sdklib = { module = "com.android.tools:sdklib", version.ref = "androidToolVer" }
 kotlin-std = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlinVer" }
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "kotlinVer" }
-kotlin-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version = "1.3.2" }
-kotlin-coroutine = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm", version = "1.6.0" }
+kotlin-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version = "1.5.1" }
 guava = { module = "com.google.guava:guava", version = "30.1.1-jre" }
 fastJson = { module = "com.alibaba:fastjson", version = "1.2.73" }
-zip4j = { module = "net.lingala.zip4j:zip4j", version = "2.6.2" }
 hamcrest = { module = "org.hamcrest:hamcrest-library", version = "2.2" }
 junit = { module = "junit:junit", version = "4.12" }
 mockito = { module = "org.mockito:mockito-core", version.ref = "mockitoVer" }
